# fastapi-template-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests_and_checks.yml
tests/: foo.py  test_foo.py
